<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/cmd_choose"
        android:id="@+id/textView_cmd"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_below="@+id/textView_cmd"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayoutLeft" >

            <TextView
                android:layout_width="@dimen/servo_label_width"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/left"
                android:id="@+id/textViewLeft"
                android:background="@color/colorLabel"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="@string/add"
                android:textSize="10dp"
                android:id="@+id/buttonAddLeft"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_add_press" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="-"
                android:id="@+id/buttonDecLeft"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_dec_press" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="@dimen/servo_label_width"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/right"
                android:id="@+id/textViewRight"
                android:background="@color/colorLabel"
                android:gravity="center" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="+"
                android:id="@+id/buttonAddRight"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_add_press" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="-"
                android:id="@+id/buttonDecRight"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_dec_press" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/linearLayout"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="@dimen/servo_label_width"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/rot"
                android:id="@+id/textViewRot"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLabel"
                android:gravity="center" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="+"
                android:id="@+id/buttonAddRot"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_add_press" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="-"
                android:id="@+id/buttonDecRot"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_dec_press" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="@dimen/servo_label_width"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/hand"
                android:id="@+id/textViewHand"
                android:layout_gravity="center_vertical"
                android:background="@color/colorLabel"
                android:gravity="center" />

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="+"
                android:id="@+id/buttonAddHand"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_add_press"/>

            <Button
                android:layout_width="@dimen/servo_button_width"
                android:layout_height="@dimen/servo_button_height"
                android:text="-"
                android:id="@+id/buttonDecHand"
                android:layout_gravity="center_vertical"
                android:background="@drawable/button_dec_press"/>

        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/servo_fine_adj"
        android:id="@+id/textView_fineAdj"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/servoAxis">

        <SurfaceView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:id="@+id/servoView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <SurfaceView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/axisView"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="42dp"
            android:layout_marginEnd="42dp"
            android:layout_marginTop="43dp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/initServoPos"
        android:id="@+id/servoPos"
        android:layout_alignTop="@+id/servoAxis"
        android:layout_toLeftOf="@+id/servoAxis"
        android:layout_toStartOf="@+id/servoAxis" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="发送配置"
        android:id="@+id/button_cfg"
        android:layout_below="@+id/servoAxis"
        android:layout_alignLeft="@+id/servoAxis"
        android:layout_alignStart="@+id/servoAxis" />

</RelativeLayout>
